fix heart fill in + titles alignment + html structure

--- a/sass/pages/_menuPage.scss
+++ b/sass/pages/_menuPage.scss
@@ -38,8 +38,6 @@
                 }
             }
             &Heart{
-                opacity: 1;
-                transition: opacity 400ms;
                 position: absolute;
                 cursor: pointer;
 				z-index: 2;
