--- a/sass/pages/_welcomePage.scss
+++ b/sass/pages/_welcomePage.scss
@@ -5,7 +5,8 @@
     margin-bottom: 20px;
     &Title{ 
         margin-bottom: 0;
-        margin-left: 20px;
+        margin-left: auto;
+        margin-right: auto;
     }
     &Text{ 
         margin-bottom: 20px;
@@ -84,6 +85,7 @@
             margin-top: 20px;
             position: relative;
             right: 10px;
+            padding-top: 2px;
         }
         &Icon{
             padding-left: 10px;
@@ -179,6 +181,43 @@
                 bottom: 60px;
                 height: 20px;
                 width: 20px;
+                transition: transform 400ms ease-out;
+                overflow: hidden;
+                &:hover, &:focus{
+                    cursor: pointer;
+                    .restaurantsMainCardGradeFull{
+                        opacity: 1;
+                        .restaurantsMainCardGradeHeart{
+                            opacity: 0;
+                        }
+                        .restaurantsMainCardGradeHeartFull{
+                            color: transparent;
+                        }
+                    }
+                }
+                &Empty{
+                    .restaurantsMainCardGradeHeart{
+                        opacity: 1;
+                        z-index: 2;
+                        transition: opacity 3000ms ease-in-out;
+                    }
+                    
+                }
+                &Full{
+                    .restaurantsMainCardGradeHeartFull{
+                        z-index: 10;
+                        transition: opacity 400ms 100ms;
+                        position: relative;
+                        top: 0px;
+                        right: 0px;
+                        background-image: linear-gradient(170deg, $colour-heart-bot 0%, $colour-heart-top 100%);
+                        background-clip: text;
+                        -webkit-background-clip: text;
+                        transition: color 400ms 100ms ease-in-out;
+                        color: $colour-white;
+                        overflow: hidden;
+                    }
+                }
             }
             &New{
                 background-color: $colour-bannew;
